Fix code snippet gradient when too long

--- a/darkify.css
+++ b/darkify.css
@@ -9861,3 +9861,7 @@ span.emoji-outer:not(:empty):hover {
 
 /* Drag files over pane */
 .message_pane_drag_overlay_mount_point {}
+
+.c-pillow_file__content--collapsed:after {
+  background: linear-gradient(0deg, #292929, hsla(0, 0%, 100%, 0) 40px);
+}
